# elaya-stagecoach

./: .dockerignore  .env.example  Dockerfile  Elaya_Autonomy_Protocol.md  README.md  alembic.ini  entrypoint.py  pytest.ini  render.yaml  repo_audit.py  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
app/: build.py  config.py  core_api.py  entrypoint.py  entrypoint_trainer.py  entrypoint_web.py  entrypoint_worker.py  health.py  hq.py  main.py  mw_sentry.py  sentry.py  status_utils.py  ui.py  webhook.py
assets/: README_ASSETS.md  meta.yaml
data/: pulse_quotes.txt
docker/: entrypoint.sh
docs/: Elaya_Current_Status_Q4_2025.md  Elaya_DevOps_Runbook_Q4_2025.md  HQ_Principle_Text_Generation.md  README.md  SCENE_Architecture.md  Trainer_Portal.md
elaya-stagecoach/: pyproject.toml
elaya_cli/: cli.py  pyproject.toml
elaya_cli/elaya/: .gitignore  __init__.py  cli.py  core.py
elaya_cli/elaya/commands/: __init__.py  cycle_cmd.py  diag_cmd.py  event_cmd.py  help_cmd.py  intro_cmd.py  project_cmd.py  reflect_cmd.py  status_cmd.py  sync_cmd.py  transition_cmd.py
elaya_cli/elaya/core/: __init__.py  api_client.py  config.py  logger.py  state.py
elaya_cli/elaya_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
migrations/: env.py
scripts/: backup.sh  delete_webhook.sh  get_webhook_info.sh  make_status_report.py  send_summary.py  set_webhook.sh  vacuum.py
tests/: test_healthz.py  test_scene_config.py  test_scene_manager.py  test_status_json.py
tools/: daily_report.py  make_hq_pulse.py  make_journal.py  make_pulse_entry.py  (+3 more)
(+280 files in other folders)
